# Aspen-ECS

./: CMakeLists.txt  README.md  ecs_core.c  ecs_core.h  main.c
Components/TestComponent/: test_component.c  test_component.h
ECS/include/: components_tags.def  components_tags.h  ecs_core.h
ECS/src/: components_tags.c  ecs_core.c
Entities/: Test_Entity.c
Systems/TestSystem/: value_increase_system.c
include/entities/: E_test.h
include/systems/: S_value_increase.h
src/: main.c
src/entities/: E_test.c
src/systems/: S_value_increase.c
